--- a/Project/src/views/partials/navbar-dark.ejs
+++ b/Project/src/views/partials/navbar-dark.ejs
@@ -10,21 +10,294 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ms-5 me-auto mb-2 mb-lg-0">
                 <li class="nav-item mx-2">
-                    <a class="nav-link active fw-semibold" aria-current="page" href="./index.html">Home</a>
+                    <a class="nav-link active fw-semibold" aria-current="page" href="/">Home</a>
                 </li>
                 <li class="nav-item mx-2">
-                    <a class="nav-link active fw-semibold" aria-current="page" href="./about.html">About</a>
+                    <a class="nav-link active fw-semibold" aria-current="page" href="/about">About</a>
                 </li>
                 <li class="nav-item mx-2">
-                    <a class="nav-link active fw-semibold" aria-current="page" href="./contact.html">Contact</a>
+                    <a class="nav-link active fw-semibold" aria-current="page" href="/contact">Contact</a>
                 </li>
-                <li class="nav-item mx-2">
-                    <a class="nav-link active fw-semibold" aria-current="page" href="./donate.html">Donate</a>
-                </li>
+                <% if(!user || user.role.toLowerCase()==='donor') { %>
+                    <li class="nav-item mx-2">
+                        <a class="nav-link active fw-semibold" aria-current="page" href="/donate">Donate</a>
+                    </li>
+                <% } %>
+                <% if(user.role === 'NGO') { %>
+                    <li class="nav-item mx-2">
+                        <a class="nav-link active fw-semibold" aria-current="page" href="/donations/">Donations</a>
+                    </li>
+                <% } %>
             </ul>
-            <a class="nav-link active" aria-current="page" href="/auth/login">
-                <button class="btn btn-outline-secondary" type="submit">Login</button>
-            </a>
+            <% if(!user) { %>
+                <a class="nav-link active" aria-current="page" href="/auth/login">
+                    <button class="btn btn-outline-secondary" type="submit">Login</button>
+                </a>
+            <% } else { %>
+                <div class="d-flex align-items-center">
+
+                    <li class="nav-item dropdown me-3 list-unstyled pe-2">
+                        <a class="nav-link text-white position-relative" href="#" id="notificationDropdown" role="button"
+                        data-bs-toggle="dropdown" aria-expanded="false">
+                            <i class="bi bi-bell fs-5"></i>
+
+                            <!-- ✅ Dynamic unread badge -->
+                            <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger notification-badge-count <%= unreadCount > 0 ? '' : 'd-none' %>"
+                                style="scale: 0.7;">
+                                <%= unreadCount %>
+                                <span class="visually-hidden">unread messages</span>
+                            </span>
+                        </a>
+
+                        <ul class="dropdown-menu dropdown-menu-end dropdown-menu-dark p-0"
+                            aria-labelledby="notificationDropdown"
+                            style="width: 350px; max-height: 400px; overflow-y: auto; border: 1px solid #444;"
+                            id="notificationDropdownList">
+
+                            <!-- ✅ Header -->
+                            <li class="p-3 border-bottom border-secondary sticky-top bg-dark">
+                                <div class="d-flex justify-content-between align-items-center">
+                                    <h6 class="m-0 fw-bold text-white">Notifications</h6>
+                                    <a href="/<%= user.role.toLowerCase() %>/notifications" class="text-decoration-none">
+                                        <small class="text-secondary">
+                                            <%= unreadCount > 0 ? unreadCount+' New' : 'View all' %>
+                                        </small>
+                                    </a>
+                                </div>
+                            </li>
+
+                            <!-- ✅ Empty State -->
+                            <% if (!popNotifications || popNotifications.length === 0) { %>
+                                
+                            <% } %>
+
+                            <!-- ✅ Real Notifications -->
+                            <% popNotifications.forEach(notification => { 
+
+                                let iconClass = "bi-bell text-info";
+                                if (notification.type === "success") iconClass = "bi-check-circle-fill text-success";
+                                if (notification.type === "danger") iconClass = "bi-x-circle-fill text-danger";
+
+                                const now = new Date();
+                                const createdAt = new Date(notification.createdAt);
+                                const diffMs = now - createdAt;
+
+                                const seconds = Math.floor(diffMs / 1000);
+                                const minutes = Math.floor(seconds / 60);
+                                const hours = Math.floor(minutes / 60);
+                                const days = Math.floor(hours / 24);
+
+                                let timeText = "";
+                                if (seconds < 60) timeText = `${seconds} seconds ago`;
+                                else if (minutes < 60) timeText = `${minutes} minutes ago`;
+                                else if (hours < 24) timeText = `${hours} hours ago`;
+                                else if (days < 7) timeText = `${days} days ago`;
+                                else timeText = createdAt.toLocaleString();
+                                // let timeText = getTimeText(new Date(notification.createdAt));
+                            %>
+
+                            <li>
+                                <a class="dropdown-item text-wrap p-3 border-bottom border-secondary <%= notification.notReaded ? 'new' : '' %>"
+                                href="<%= notification.redirectUrl || '#' %>">
+                                    <div class="d-flex align-items-start">
+                                        <i class="bi <%= iconClass %> fs-4 me-3"></i>
+                                        <div>
+                                            <h6 class="mb-1 fw-semibold text-white"><%= notification.title %></h6>
+                                            <p class="mb-1 text-light small"><%= notification.message %></p>
+                                            <small class="text-secondary" id="timeText" style="font-size: 0.75rem;">
+                                                <%= timeText %>
+                                            </small>
+                                        </div>
+                                    </div>
+                                </a>
+                            </li>
+
+                            <% }) %>
+                        </ul>
+                    </li>
+                    
+                    <li class="nav-item dropdown list-unstyled">
+                        <a class="nav-link text-white dropdown-toggle" href="#" id="accountDropdown" role="button"
+                            data-bs-toggle="dropdown" aria-expanded="false">
+                            <i class="bi bi-person-circle"></i> Account
+                        </a>
+                        <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="accountDropdown">
+                            <li>
+                                <a class="dropdown-item" href="/<%= user.role.toLowerCase() %>/">
+                                    <i class="bi bi-speedometer2 me-2"></i> Dashboard
+                                </a>
+                            </li>
+                            <li>
+                                <hr class="dropdown-divider">
+                            </li>
+                            <li>
+                                <a class="dropdown-item text-danger" style="cursor: pointer;" onclick="logoutUser()">
+                                    <i class="bi bi-box-arrow-right me-2"></i> Logout
+                                </a>
+                            </li>
+                        </ul>
+                    </li>
+                </div>
+            <% } %>
         </div>
     </div>
 </nav>
+
+<script src="/socket.io/socket.io.js"></script>
+<script>
+    document.addEventListener("DOMContentLoaded", () => {
+        const socket = io();
+
+        const userId = "<%= user ? user._id : null %>";
+
+        if (userId) {
+            socket.emit("register-user", userId);
+        }
+
+        const badge = document.querySelector(".notification-badge-count");
+        const dropdown = document.querySelector("#notificationDropdownList");
+
+        socket.on("new-notification", notification => {
+
+            // ✅ Increase pill count
+            let current = parseInt(badge.innerText || 0);
+            badge.innerText = current + 1;
+            badge.classList.remove("d-none");
+
+            // ✅ Build notification HTML
+            let icon = "bi-bell text-info";
+            if (notification.type === "success") icon = "bi-check-circle-fill text-success";
+            if (notification.type === "danger") icon = "bi-x-circle-fill text-danger";
+
+            let timeText = getTimeText(new Date(notification.createdAt));
+
+            const li = document.createElement("li");
+            li.innerHTML = `
+                        <a class="dropdown-item text-wrap p-3 border-bottom border-secondary new" href="${notification.redirectUrl ? notification.redirectUrl : '#'}">
+                            <div class="d-flex align-items-start">
+                                <i class="bi ${icon} fs-4 me-3"></i>
+                                <div>
+                                    <h6 class="mb-1 fw-semibold text-white">${notification.title}</h6>
+                                    <p class="mb-1 text-light small">${notification.message}</p>
+                                    <small class="text-secondary" id="timeText" style="font-size: 0.75rem;">${timeText}</small>
+                                </div>
+                            </div>
+                        </a>
+                        `;
+
+            const headerLi = dropdown.querySelector("li"); // first li = header
+
+            if (headerLi && headerLi.nextSibling) {
+                dropdown.insertBefore(li, headerLi.nextSibling); // after header
+            } else {
+                dropdown.appendChild(li); // fallback
+            }
+
+            const notificationBell = document.getElementById('notificationDropdown');
+            if(notificationBell) {
+                notificationBell.addEventListener('show.bs.dropdown', function () {
+                    let timeText = getTimeText(new Date(notification.createdAt));
+                    li.querySelector('#timeText').innerText = timeText;
+                });
+            }
+
+            // Till now notification is added in UI, now actually show it to user in device if user has allowed
+            <% if(user && notificationsEnabled) { %>
+                if (Notification.permission === "granted") {
+                    const notif = new Notification(notification.title, {
+                        body: notification.message,
+                        icon: '/images/logo_150px.png'
+                    });
+
+                    notif.onclick = function(event) {
+                        event.preventDefault(); // prevent the browser from focusing the Notification's tab
+                        window.open(notification.redirectUrl || '#', '_blank');
+                    }
+                } else if (Notification.permission !== "denied") {
+                    Notification.requestPermission().then(permission => {
+                        if (permission === "granted") {
+                            const notif = new Notification(notification.title, {
+                                body: notification.message,
+                                icon: '/images/logo_150px.png'
+                            });
+
+                            notif.onclick = function(event) {
+                                event.preventDefault(); // prevent the browser from focusing the Notification's tab
+                                window.open(notification.redirectUrl || '#', '_blank');
+                            }
+                        }
+                    });
+                }
+            <% } %>
+        });
+
+        function getTimeText(createdAt) {
+            const now = new Date();
+            const diffMs = now - createdAt;
+
+            const seconds = Math.floor(diffMs / 1000);
+            const minutes = Math.floor(seconds / 60);
+            const hours = Math.floor(minutes / 60);
+            const days = Math.floor(hours / 24);
+
+            if (seconds < 60) {
+                return `${seconds} seconds ago`;
+            } else if (minutes < 60) {
+                return `${minutes} minutes ago`;
+            } else if (hours < 24) {
+                return `${hours} hours ago`;
+            } else if (days < 7) {
+                return `${days} days ago`;
+            } else {
+                return createdAt.toLocaleString();
+            }
+        }
+    
+        let isMarkedRead = false;
+        const notificationBell = document.getElementById('notificationDropdown');
+        if(notificationBell) {
+            notificationBell.addEventListener('show.bs.dropdown', function () {    
+                // OPTIONAL: Visually hide the red badge immediately for better UX
+                
+                fetch('/notifications/mark-all-notifications-read', {
+                    method: 'POST',
+                    headers: {
+                        'Content-Type': 'application/json'
+                    }
+                })
+                .then(response => {
+                    if (response.ok) {
+                        if (badge) {
+                            badge.innerText = '0';
+                            badge.classList.add('d-none');
+                        }
+                        isMarkedRead = true;
+                        console.log("All notifications marked as read.");
+                    } else {
+                        console.error("Failed to mark notifications as read.");
+                    }
+                })
+                .catch(error => {
+                    console.error("Error:", error);
+                });
+            });
+
+            notificationBell.addEventListener('hidden.bs.dropdown', function () {
+                if(isMarkedRead) {
+                    const li = `<li class="p-3 border-bottom border-secondary sticky-top bg-dark">
+                                    <div class="d-flex justify-content-between align-items-center">
+                                        <h6 class="m-0 fw-bold text-white">Notifications</h6>
+                                        <a href="/<%= user.role.toLowerCase() %>/notifications" class="text-decoration-none">
+                                            <small class="text-secondary">
+                                                View all
+                                            </small>
+                                        </a>
+                                    </div>
+                                </li>`;
+                    dropdown.innerHTML = li;
+                    isMarkedRead = false;
+                }
+            });
+        }
+    });
+</script>
